temp_cfg/istio_dashboards_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: patrick-cloud-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kubernetes.patrick-cloud.com"
  - port:
      number: 443
      name: https
      protocol: TCP
    hosts:
    - "kubernetes.patrick-cloud.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: grafana
    match:
    - uri:
        prefix: "/grafana/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: grafana.monitoring.svc.cluster.local
  # - route:
  #   - destination:
  #       host: grafana.monitoring.svc.cluster.local
  #       port:
  #         number: 80
          
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: prometheus
    match:
    - uri:
        prefix: "/prometheus/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: prometheus-server.monitoring.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: monitoring
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: kiali
    match:
    - uri:
        prefix: "/kiali/"
    rewrite:
       uri: "/kiali/"
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
